--- a/node/tsconfig.json
+++ b/node/tsconfig.json
@@ -1,16 +1,13 @@
 {
     "compilerOptions": {
         "target": "es2019",
-        "lib": [
-            "ES2019",
-            "DOM",
-        ],
         "module": "es2020",
         "moduleResolution": "node",
         "strict": true,
-        "inlineSourceMap": true
     },
-    "exclude": [
-        "node_modules"
+    "include": [
+        "./index.ts",
+        "../common/**/*",
+        "../src/**/*",
     ]
 }
