--- a/node/tsconfig.json
+++ b/node/tsconfig.json
@@ -8,6 +8,7 @@
     "include": [
         "game.ts",
         "index_fake_canvas.ts",
+        "index_node_canvas.ts",
         "index_noop_canvas.ts",
         "../common/**/*",
         "../src/**/*",
