--- a/browser/tsconfig.json
+++ b/browser/tsconfig.json
@@ -11,8 +11,7 @@
         "inlineSourceMap": true
     },
     "include": [
-        "./index.ts",
-        "../common/**/*",
-        "../src/**/*",
+        "./*.ts",
+        "../src/**/*.ts",
     ]
 }
